Crash when starting Wayland session with mouse keys enabled
See https://discourse.gnome.org/t/cannot-login-to-gnome-wayland/23514
This looks like #2869 (closed) which seems to have regressed via 5fc60eac.
Copy of the relevant part of the backtrace from that post:
Thread 1 (Thread 0x7931e3e006c0 (LWP 6697)):
#0 meta_seat_impl_run_input_task (seat_impl=0x0, task=0x7931a0023c70 [GTask], dispatch_func=0x793232bea9f0 <create_device_in_impl>) at ../mutter/src/backends/native/meta-seat-impl.c:144
#1 meta_virtual_input_device_native_constructed (object=<optimized out>) at ../mutter/src/backends/native/meta-virtual-input-device-native.c:1042
#2 0x00007932330a497a in g_object_new_internal (class=0x7931a00058e0, params=0x7931e3dfe210, n_params=3) at ../glib/gobject/gobject.c:2657
#3 0x00007932330a6afb in g_object_new_internal (class=0x7931a00058e0, params=0x7931e3dfe210, n_params=3) at ../glib/gobject/gobject.c:2923
#4 g_object_new_valist (object_type=<optimized out>, first_property_name=first_property_name@entry=0x793232c30d3a "seat", var_args=var_args@entry=0x7931e3dfe4e0) at ../glib/gobject/gobject.c:2945
#5 0x00007932330a6eb0 in g_object_new (object_type=<optimized out>, first_property_name=first_property_name@entry=0x793232c30d3a "seat") at ../glib/gobject/gobject.c:2418
#6 0x0000793232be8bba in meta_seat_native_create_virtual_device (seat=0x57d46f0817f0 [MetaSeatNative], device_type=CLUTTER_POINTER_DEVICE) at ../mutter/src/backends/native/meta-virtual-input-device-native.c:101
#7 0x0000793232be2199 in enable_mousekeys (device_evdev=0x7931a0002580 [MetaInputDeviceNative]) at ../mutter/src/backends/native/meta-input-device-native.c:957
#8 meta_input_device_native_apply_kbd_a11y_settings_in_impl (device=0x7931a0002580 [MetaInputDeviceNative], settings=0x7931e3dfe600) at ../mutter/src/backends/native/meta-input-device-native.c:1308
#9 meta_seat_impl_take_device (seat_impl=<optimized out>, device=<optimized out>) at ../mutter/src/backends/native/meta-seat-impl.c:1739
#10 meta_seat_impl_take_device (seat_impl=seat_impl@entry=0x57d46f082c70 [MetaSeatImpl], device=device@entry=0x7931a00e7b00 [MetaInputDeviceNative]) at ../mutter/src/backends/native/meta-seat-impl.c:1706
#11 0x0000793232be2b24 in process_base_event (seat_impl=0x57d46f082c70 [MetaSeatImpl], event=0x7931a007d330) at ../mutter/src/backends/native/meta-seat-impl.c:1797
#12 process_event (seat_impl=0x57d46f082c70 [MetaSeatImpl], event=0x7931a007d330) at ../mutter/src/backends/native/meta-seat-impl.c:2683
#13 process_events (seat_impl=seat_impl@entry=0x57d46f082c70 [MetaSeatImpl]) at ../mutter/src/backends/native/meta-seat-impl.c:2699
#14 0x0000793232be5044 in init_libinput (seat_impl=0x57d46f082c70 [MetaSeatImpl], error=0x7931e3dfe7a0) at ../mutter/src/backends/native/meta-seat-impl.c:2869
#15 input_thread (seat_impl=0x57d46f082c70 [MetaSeatImpl]) at ../mutter/src/backends/native/meta-seat-impl.c:2968
#16 0x0000793233172026 in g_thread_proxy (data=0x57d46f071300) at ../glib/glib/gthread.c:892
#17 0x00007932328a339d in start_thread (arg=<optimized out>) at pthread_create.c:447
#18 0x000079323292849c in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
CC: @jadahl